<resources>
    <string name="app_name">Custom List View</string>
    <string name="title_listitems">Title For List Items</string>
	<string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Laoreet non curabitur gravida arcu ac tortor dignissim convallis aenean.</string>
    <string name="testImageUrl">https://thedirect.s3.amazonaws.com/media/photos/yelena-black-widow.jpg</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="more">More</string>
    <string name="share">Share</string>
    <string name="delete_list_item">Delete List Item</string>
</resources>